Streamlined frontmatter metadata in all product pages; new subnav partial with breadcrumbs.

--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -484,7 +484,7 @@ $badge-font-size: 0.7rem;
 
 $breadcrumbs-margin: 0 0 $global-margin 0;
 $breadcrumbs-item-font-size: rem-calc(13);
-$breadcrumbs-item-color: $primary-color;
+$breadcrumbs-item-color: $secondary-color;
 $breadcrumbs-item-color-current: $black;
 $breadcrumbs-item-color-disabled: $medium-gray;
 $breadcrumbs-item-margin: 0.5rem;
