--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -6,19 +6,40 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "September 25, 2018"
 ogType: "product"
+category: "compliance"
 customCSS: "products"
 layout: products
 collectionName: "products"
 collectionOrder: 3
 priority: "0.9"
+subnav:
+  -
+    title: "Overview"
+    slug: "overview"
+  -
+    title: "Use Cases"
+    slug: "use-cases"
+  -
+    title: "Benefits"
+    slug: "benefits"
+  -
+    title: "Customer Proof"
+    slug: "proof"
+  -
+    title: "Get Started"
+    slug: "start"
+
 ---
 ruby:
+  current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/4wojUl2MFGICcaykkGIMCK/a65e77c6c0ea966fbc8dee9659a84d4f/product-ccms-share.jpg'
   the_form = data.site.forms['1sd7ExrRIkg0SgQ0CsiiaO']
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
   img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/a4b9c86fda34d160d94bdd55c766b2e5/ccms-diagram.png'
   diagram_1 = "https://images.ctfassets.net/189dvqdsjh46/1DnnFdmBAYcWSyiGE2M6aK/1651ceeb1d2343007b09a5ce4c20ed38/c3-diagram-1.png"
   diagram_2 = "https://images.ctfassets.net/189dvqdsjh46/iEhDz8im4wyCMCGk0Wcqk/79088104bd888bcb3e9867fb0ccb242a/c3-diagram-2.png"
+
+= partial "partials/snippets/nav-sub-product"
 
 / svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
