--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -4,16 +4,37 @@ summary: "Datica's Compliant Kubernetes Service (CKS) bridges security and compl
 navTitle: "Datica CKS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
-date: "July 30, 2018"
 ogType: "product"
+category: "compliance"
 customCSS: "products"
 layout: products
 collectionName: "products"
 collectionOrder: 1
 priority: "0.9"
+subnav:
+  -
+    title: "Overview"
+    slug: "overview"
+  -
+    title: "Use Cases"
+    slug: "use-cases"
+  -
+    title: "Benefits"
+    slug: "benefits"
+  -
+    title: "Customer Proof"
+    slug: "proof"
+  -
+    title: "Get Started"
+    slug: "start"
+
 ---
-- current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/9zghfb4EzCi8csc6KYOEK/ae8460645d31a850e55e771c13772ab6/product-cks-share.jpg'
-- the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
+ruby:
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/9zghfb4EzCi8csc6KYOEK/ae8460645d31a850e55e771c13772ab6/product-cks-share.jpg'
+  current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
+  the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
+
+= partial "partials/snippets/nav-sub-product"
 
 svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
