Omitting meta keywords tag. No longer relevant for SEO, but may be needed for future search tools.

--- a/source/partials/head/_tags.erb
+++ b/source/partials/head/_tags.erb
@@ -12,7 +12,7 @@
 <meta name="topic" content="<%= current_page.data.title %>">
 <meta name="classification" content="website">
 <meta name="url" content="<%= site_url %>">
-<meta name="keywords" content="heathcare, <%= current_page.data.tags %>">
+<%# <meta name="keywords" content="heathcare, "> %><%#= current_page.data.tags %>
 <meta name="coverage" content="Worldwide">
 <meta name="distribution" content="Global">
 <meta name="author" content="<%= current_page.data.author %>">
