New background pattern images; added to preload links.

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Cloud Compliance Management System"
-summary: "Datica's Cloud Compliance Management System (CCMS) will be the first-ever tool to guide compliance assurance of managed cloud-native services."
+summary: "Cloud Compliance Management System (CCMS) maps to HITRUST and manages the continual compliance state of cloud services."
 navTitle: "Datica CCMS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
@@ -32,7 +32,7 @@ subnav:
 ---
 ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
-  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/4wojUl2MFGICcaykkGIMCK/a65e77c6c0ea966fbc8dee9659a84d4f/product-ccms-share.jpg'
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/3FCC7CKhlkP2bzFf8UzNk6/651f57bfbd77c0d38a7b188776ac4230/bg-hexagons-1.svg'
   the_form = data.site.forms['1sd7ExrRIkg0SgQ0CsiiaO']
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
   img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/a4b9c86fda34d160d94bdd55c766b2e5/ccms-diagram.png'
@@ -40,12 +40,6 @@ ruby:
   diagram_2 = "https://images.ctfassets.net/189dvqdsjh46/iEhDz8im4wyCMCGk0Wcqk/79088104bd888bcb3e9867fb0ccb242a/c3-diagram-2.png"
 
 = partial "partials/snippets/nav-sub-product"
-
-/ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-  defs
-    symbol#icon-chevron-down viewbox=("0 0 18 18")
-      title chevron-down
-      path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
 section#top.section-article.pad-no-bottom
   .row.align-center
