--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Compliant Kubernetes Service"
-summary: "Datica's Compliant Kubernetes Service (CKS) bridges security and compliance with Kubernetes<sup>&reg;</sup> to offer a complete, enterprise cloud native solution for regulated industries."
+summary: "Compliant Kubernetes Service (CKS) provides healthcare enterprises security and HIPAA compliance in a scalable, secure Kubernetes cluster."
 navTitle: "Datica CKS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
@@ -30,6 +30,8 @@ subnav:
 
 ---
 ruby:
+  bg_image = 'https://images.ctfassets.net/189dvqdsjh46/4F8Y3ZvCpWdmTRdgnTLUOF/6a39aecd28adfbf6adc99aec79b3f7f8/bg-triangles.svg'
+  current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/9zghfb4EzCi8csc6KYOEK/ae8460645d31a850e55e771c13772ab6/product-cks-share.jpg'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
