--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Compliant Managed Integration (CMI)"
-summary: "The complete toolset to handle compliant, scalable, secure data exchange with any EHR or clinical system."
+summary: "Compliant Managed Integration (CMI) handles HIPAA compliant, scalable, and secure data exchange with any EHR."
 navTitle: "Datica CMI"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
@@ -31,6 +31,8 @@ subnav:
 
 ---
 ruby:
+  bg_image = 'https://images.ctfassets.net/189dvqdsjh46/71ZkJFY8CgC3a0huhg9Wqh/d224bad2c080c6694d56137b0e59e3c5/bg-cards.svg'
+  current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/nGfjpkdV4GIIk6ii6wQiE/e3d6a9f1b90f2bdd9e4f9a071f156930/product-cmi-share.jpg'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
