--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Compliant Platform as a Service | Cloud Compliance"
-summary: "Datica CPaaS is a compliant cloud platform perfectly designed for early-stage applications."
+summary: "Compliant Platform as a Service (CPaaS) is a turnkey compliant cloud platform perfectly designed for digital health applications."
 navTitle: "Datica CPaaS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
@@ -67,6 +67,8 @@ block_benefits:
     benefit: "Do not waste precious months getting your infrastructure to a compliant state just to get started on your product or initiative."
 ---
 ruby:
+  bg_image = 'https://images.ctfassets.net/189dvqdsjh46/6Xc3X2fJYIcwz2Sd5rwuRl/cd1c5622ec375bd87625e29c9dfdb07a/bg-circles.svg'
+  current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/5nhUL1CBYQIKy4Qu822yws/0e527937543ca6793dafda4bfb834930/product-cpaas-share.jpg'
   the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
