--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -361,6 +361,9 @@
     &-10 {
         z-index: 10;
     }
+    &-15 {
+        z-index: 15;
+    }
     &-20 { // navs should exist here
         z-index: 20;
     }
