Fixed the basic z-stacking problem. Use utility classes in markup to adjust z-stacking.

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -364,6 +364,9 @@
     &-15 {
         z-index: 15;
     }
+    &-18 { // sticky & secondary navs here
+        z-index: 18;
+    }
     &-20 { // navs should exist here
         z-index: 20;
     }
