--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -439,4 +439,8 @@ $underline: false !default;
         background-blend-mode: overlay;
     }
 }
-
+@mixin abs-topleft { // less typing 
+    position: absolute;
+    top: 0;
+    left: 0;
+}
