--- a/source/assets/scss/mixins/animation.scss
+++ b/source/assets/scss/mixins/animation.scss
@@ -114,12 +114,14 @@
 //     animation: fade 1s;
 // }
 
-@keyframes fade {
-    0% {
-        opacity: 0;
-    }
+@mixin fade-in {
+    @keyframes fade {
+        0% {
+            opacity: 0;
+        }
 
-    100% {
-        opacity: 1;
+        100% {
+            opacity: 1;
+        }
     }
 }
