--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -184,6 +184,7 @@ $underline: false !default;
             -ms-flex: $set;
                 flex: $set;
 }
+$button-transition: transform $timing-default ease, box-shadow $timing-default ease-out, background-color $timing-default ease-out, color $timing-default ease-out;
 @mixin fx-hover-nudge {
     transition: $button-transition;
     &:focus,
