--- a/source/assets/scss/views/products.scss
+++ b/source/assets/scss/views/products.scss
@@ -245,11 +245,12 @@ ul.bullet-outside {
     }
 }
 .sticky {
+    z-index: 18;
     // .is-[state] classes for control over its appearance and exit if needed. Desktop only
     @include breakpoint (large) {
         transition: box-shadow $timing-default linear, background-color .3s linear;
         // background-color: $gray-11;
-        @include shadow(1px, 1px, $black, 0.90);
+        @include shadow(0, 0, $black, 0);
         // opacity: 0;
         // &.is-anchored {
         //     opacity: 0;
