--- a/source/partials/snippets/_nav-sub-product.slim
+++ b/source/partials/snippets/_nav-sub-product.slim
@@ -3,7 +3,7 @@ ruby:
     puts "⚠️ The page at #{current_page.url} is missing key variables for the subnav! \n Required: category, navTitle, subnav (a yaml array)."
   end
 #top.show-for-large.z-18 data-sticky-container="data-sticky-container"
-  .subnav.sticky.sticky-nav.bg-gray-1 data-sticky="data-sticky" data-options="marginTop:0; topAnchor:top; activeClass:active; stickyOn:large;" data-theme="light"
+  .subnav.sticky.sticky-nav data-sticky="data-sticky" data-options="marginTop:0; topAnchor:top; activeClass:active; stickyOn:large;" data-theme="light"
     ul.menu.menu-secondary.align-center.align-middle data-magellan="data-magellan"
       li
         nav aria-label=("You are here:") role="navigation" 
